fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,8 @@
 .main-content {
   height: 100vh;
   width: 100vw;
-  background-color: lightgray;
-}
-
-.app-nav {
-  height: 60px;
-}
-
-.app-body {
-  height: calc(100vh - 60px);
+  background-color: #efefef;
+  overflow: hidden;
 }
 
 .btn-tonal {
@@ -43,4 +36,15 @@
 }
 .col-md-9 {
   width: 75%;
+}
+
+.btn {
+  padding: 0.75rem 1rem;
+  border-radius: 4px;
+  border: none;
+  background-color: lightgray;
+}
+.btn-danger {
+  background-color: #db3f3a;
+  color: white;
 }
