--- a/src/screens/todoMainScreen/components/navbar/Navbar.css
+++ b/src/screens/todoMainScreen/components/navbar/Navbar.css
@@ -3,7 +3,9 @@
   flex-direction: row;
   align-items: center;
   background-color: white;
-  padding: 0;
+  padding: 0.75rem 0;
+  height: 28px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
   margin: 0;
 }
 
