--- a/src/screens/todoMainScreen/components/sidenav/SideNav.css
+++ b/src/screens/todoMainScreen/components/sidenav/SideNav.css
@@ -6,6 +6,7 @@
   background-color: white;
   height: 100%;
   padding: 1.25rem;
+  box-shadow: 0 16px 12px rgba(0, 0, 0, 0.25);
 }
 
 .side-nav h6 {
